started working on css

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
           <img src="image-placeholder.svg" alt="preview-img" />
         </div>
       </div>
+      <div class="controls">
+        <button class="reset-filter">Reset Filters</button>
+        <div class="row">
+          <button class="choose-img">Choose Image</button
+          ><button class="save-img">Save Images</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
