--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
           <div class="filter">
             <label for="" class="title">Filters</label>
             <div class="options">
-              <button class="active">Brightness</button>
-              <button>Saturation</button>
-              <button>Inversion</button><button>Grayscale</button>
+              <button id="brithtness" class="active">Brightness</button>
+              <button id="saturation">Saturation</button>
+              <button id="inversion">Inversion</button>
+              <button id="grayscale">Grayscale</button>
             </div>
             <div class="slider">
               <div class="filter-info">
@@ -56,10 +57,12 @@
       <div class="controls">
         <button class="reset-filter">Reset Filters</button>
         <div class="row">
+          <input type="file" class="flie-input" accept="image/*" hidden />
           <button class="choose-img">Choose Image</button
           ><button class="save-img">Save Images</button>
         </div>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
