--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="filter">
             <label for="" class="title">Filters</label>
             <div class="options">
-              <button id="brithtness" class="active">Brightness</button>
+              <button id="brightness" class="active">Brightness</button>
               <button id="saturation">Saturation</button>
               <button id="inversion">Inversion</button>
               <button id="grayscale">Grayscale</button>
