--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="wrapper">
         <div class="editor-panel">
           <div class="filter">
-            <label for="" class="title">Filters</label>
+            <label class="title">Filters</label>
             <div class="options">
               <button id="brightness" class="active">Brightness</button>
               <button id="saturation">Saturation</button>
@@ -43,10 +43,16 @@
           <div class="rotate">
             <label class="title">Rotate & Flip</label>
             <div class="options">
-              <button><i class="fa-solid fa-rotate-left"></i></button
-              ><button><i class="fa-solid fa-rotate-right"></i></button
-              ><button><i class="bx bx-reflect-vertical"></i></button
-              ><button><i class="bx bx-reflect-horizontal"></i></button>
+              <button id="left"><i class="fa-solid fa-rotate-left"></i></button>
+              <button id="right">
+                <i class="fa-solid fa-rotate-right"></i>
+              </button>
+              <button id="vertical">
+                <i class="bx bx-reflect-vertical"></i>
+              </button>
+              <button id="horizontal">
+                <i class="bx bx-reflect-horizontal"></i>
+              </button>
             </div>
           </div>
         </div>
